--- a/etl/Employment by Sector.ipynb
+++ b/etl/Employment by Sector.ipynb
@@ -2254,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -2262,12 +2262,12 @@
    "source": [
     "discs = ['Name', 'Year', 'Country', 'Sex']\n",
     "\n",
-    "conc = data.columns[11:19]"
+    "conc = data.columns[11:20]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -2277,11 +2277,11 @@
       "text/plain": [
        "Index(['Total employment ('000)', 'Agriculture ('000)', 'Agriculture (%)',\n",
        "       'Industry ('000)', 'Industry (%)', 'Services ('000)', 'Services (%)',\n",
-       "       'Not adequately defined ('000)'],\n",
+       "       'Not adequately defined ('000)', 'Not adequately defined (%)'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -2316,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -2330,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -2421,6 +2421,12 @@
        "      <td>Not adequately defined ('000)</td>\n",
        "      <td>measure</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>not_adequately_defined</td>\n",
+       "      <td>Not adequately defined (%)</td>\n",
+       "      <td>measure</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2438,10 +2444,11 @@
        "8                     industry                   Industry (%)        measure\n",
        "9                 services_000                Services ('000)        measure\n",
        "10                    services                   Services (%)        measure\n",
-       "11  not_adequately_defined_000  Not adequately defined ('000)        measure"
+       "11  not_adequately_defined_000  Not adequately defined ('000)        measure\n",
+       "12      not_adequately_defined     Not adequately defined (%)        measure"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2452,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -2492,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -2503,7 +2510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -2514,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -2526,7 +2533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -2546,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -2569,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -2627,6 +2634,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>country,sex,year</td>\n",
+       "      <td>not_adequately_defined</td>\n",
+       "      <td>ddf--datapoints--not_adequately_defined--by--c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>country,sex,year</td>\n",
        "      <td>not_adequately_defined_000</td>\n",
        "      <td>ddf--datapoints--not_adequately_defined_000--b...</td>\n",
        "    </tr>\n",
@@ -2672,6 +2685,7 @@
        "0  country,sex,year             agriculture_000   \n",
        "0  country,sex,year                    industry   \n",
        "0  country,sex,year                industry_000   \n",
+       "0  country,sex,year      not_adequately_defined   \n",
        "0  country,sex,year  not_adequately_defined_000   \n",
        "0  country,sex,year                    services   \n",
        "0  country,sex,year                services_000   \n",
@@ -2686,6 +2700,7 @@
        "0  ddf--datapoints--agriculture_000--by--country-...  \n",
        "0  ddf--datapoints--industry--by--country--sex--y...  \n",
        "0  ddf--datapoints--industry_000--by--country--se...  \n",
+       "0  ddf--datapoints--not_adequately_defined--by--c...  \n",
        "0  ddf--datapoints--not_adequately_defined_000--b...  \n",
        "0  ddf--datapoints--services--by--country--sex--y...  \n",
        "0  ddf--datapoints--services_000--by--country--se...  \n",
@@ -2694,7 +2709,7 @@
        "0                             ddf--entities--sex.csv  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
