script and updated output

--- a/etl/Employment by Sector.ipynb
+++ b/etl/Employment by Sector.ipynb
@@ -2553,14 +2553,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "for k, df in dps.items():\n",
-    "    df_ = df.reset_index()\n",
+    "    df_ = df.reset_index().dropna()\n",
     "    path = '../ddf--datapoints--{}--by--country--sex--year.csv'.format(k)\n",
     "    df_.to_csv(path, index=False)"
    ]
